# LearningSituationGenerator

./: com.otonielreyes.LearningSituationGenerator.json  meson.build
data/: com.otonielreyes.LearningSituationGenerator.appdata.xml.in  com.otonielreyes.LearningSituationGenerator.desktop.in  com.otonielreyes.LearningSituationGenerator.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  learningsituationgenerator.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/gtk/: help-overlay.ui
